--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,18 +1,18 @@
 {
 	"background_color": "#ffffff",
 	"theme_color": "#333333",
-	"name": "TODO",
-	"short_name": "TODO",
+	"name": "Juan Carlos Del Rio",
+	"short_name": "blog.delrioe.live",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "logo-192.png",
+			"src": "JC-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "logo-512.png",
+			"src": "JC-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
